--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,6 +67,7 @@ body{
             background-color: #FFFFFF;
             border-radius: 50px;
             color: #101828;
+            font-weight: 600;
             align-content: center;
             text-align: center;
         }
