--- a/CSS/style.css
+++ b/CSS/style.css
@@ -686,6 +686,7 @@ body{
                             color: #667085;
                             span{
                                 text-decoration: underline;
+                                text-underline-offset: 2px
                             }
                         }
                         .bottom{
