--- a/tuan 19/CSS/style.css
+++ b/tuan 19/CSS/style.css
@@ -1024,7 +1024,7 @@ footer{
         display: flex;
         flex-direction: column;
         gap: 64px;
-        .container{
+        .container-ft{
             width: 100%;
             max-width: 1280px;
             margin: 0 auto;
