--- a/tuan 19/CSS/tablet.css
+++ b/tuan 19/CSS/tablet.css
@@ -268,7 +268,7 @@
             }
         }
         .footer-bottom{
-            .main{
+            .container-ft{
                 max-width: 980px;
                 .wrap{
                     max-width: 960px;
