--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1061,6 +1061,7 @@ footer{
             max-width: 1280px;
             margin: 0 auto;
             padding-top: 32px;
+            border-top: 1px solid white;
             .wrap{
                 width: 100%;
                 max-width: 1216px;
