--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1065,6 +1065,7 @@ footer{
             .wrap{
                 width: 100%;
                 max-width: 1216px;
+                margin: 0 auto;
                 display: flex;
                 justify-content: space-between;
                 .left{
