--- a/CSS/style.css
+++ b/CSS/style.css
@@ -290,7 +290,8 @@ body{
                                 margin: 0 auto;
                                 text-align: center;
                                 .head{
-                                    text-align: center;
+                                    display: flex;
+                                    justify-content: center;
                                     font-weight: 700;
                                     font-size: 32px;
                                     color: #FFFFFF;
