--- a/CSS/style.css
+++ b/CSS/style.css
@@ -681,6 +681,7 @@ body{
                         display: flex;
                         flex-direction: column;
                         gap: 32px;
+                        border-top: 1px solid black;
                         .top{
                             margin-top: 33px;
                             font-weight: 400;
@@ -688,7 +689,7 @@ body{
                             color: #667085;
                             span{
                                 text-decoration: underline;
-                                text-underline-offset: 2px
+                                text-underline-offset: 4px;
                             }
                         }
                         .bottom{
