--- a/CSS/style.css
+++ b/CSS/style.css
@@ -631,7 +631,7 @@ body{
         gap: 64px;
         .heading{
             align-content: center;
-            width: 1280px;;
+            width: 1280px;
             margin: 0 auto;
             height: 68px;
             border-bottom: 0.2px solid black;
@@ -665,7 +665,7 @@ body{
                 margin: 0 auto;
                 display: flex;
                 
-                gap: 32px;
+                gap: 64px;
                 .left{
                     max-width: 608px;
                     display: flex;
